# kuesa

./: .clang-format  .clang-tidy  .clazy  .gitattributes  .gitignore  .krazy  .qmake.conf  KDAB_custom_material.txt  LICENSING.txt  README.md  STYLE.md  config_help.txt  configure.json  coverage.sh  groups  kuesa-global.pri  kuesa.pro  package.pri  project.config  sync.profile
blog/picking/: main.cpp
blog/picking/assets/: assets.qrc  picking.gltf
blog/picking/qml/: main.qml
blog/tracking/: main.cpp  tracking.pro
blog/tracking/assets/: assets.qrc  tracking.gltf
blog/tracking/qml/: main.qml
config.tests/draco/: draco.pro  main.cpp
config.tests/ktx/: ktx.pro  main.cpp
docs/: examples-manifest.xml  gltfeditor.html  gltfviewer.html  index.html  kuesa-abstractassetcollection-members.html  kuesa-abstractassetcollection.html  kuesa-abstractpostprocessingeffect-members.html  kuesa-abstractpostprocessingeffect.html  kuesa-animationclipcollection-members.html  kuesa-animationclipcollection.html  kuesa-animationmappingcollection-members.html  kuesa-animationmappingcollection.html  kuesa-animationplayer-members.html  kuesa-animationplayer.html  kuesa-animationpulse-members.html  kuesa-animationpulse.html  kuesa-armaturecollection-members.html  kuesa-armaturecollection.html  kuesa-attribution-bob-dass-equirectangular-env-map.html  kuesa-attribution-dds-loader-python.html  kuesa-attribution-dr-wav.html  kuesa-attribution-draco.html  kuesa-attribution-freeverb.html  kuesa-attribution-gli.html  kuesa-attribution-ktx.html  kuesa-attribution-mikktspace.html  kuesa-attribution-readerwriterqueue.html  kuesa-bloomeffect-members.html  kuesa-bloomeffect.html  kuesa-cameracollection-members.html  kuesa-cameracollection.html  kuesa-car-scene-android-androidmanifest-xml.html  kuesa-car-scene-assets-assets-qrc.html  kuesa-car-scene-car-scene-pro.html  kuesa-car-scene-example.html  kuesa-car-scene-main-cpp.html  kuesa-car-scene-qml-carcameracontroller-qml.html  kuesa-car-scene-qml-idledemoanimation-qml.html  kuesa-car-scene-qml-main-qml.html  kuesa-car-scene-qml-mainmenu-qml.html  (+490 more)
docs/style/: style.css
examples/: examples.pro
examples/kuesa/: kuesa.pro
examples/kuesa/assets/: .gitattributes
examples/kuesa/car-scene/: Info-ios.plist  Info-macos.plist  car-scene.pro  main.cpp
examples/kuesa/drill-experience/: drill-experience.pro
resources/: kdab.icns  kuesa.icns  resources.qrc
src/: src.pro
src/core/: animationplayer.cpp  animationplayer.h  animationpulse.cpp  animationpulse.h  configure.json  configure.pri  core.pri  core.pro  draco_prefix_p.h  effectproperties.h  effectslibrary.cpp  effectslibrary_p.h  empty2dtexture.cpp  empty2dtexture_p.h  entitytransformwatcher.cpp  entitytransformwatcher_p.h  factory.h  gltf2material.cpp  gltf2material.h  gltf2materialproperties.cpp  gltf2materialproperties.h  ktxtexture.cpp  ktxtexture.h  kuesa_global.cpp  kuesa_global.h  kuesa_global_p.h  kuesa_p.h  kuesa_utils.cpp  kuesa_utils_p.h  kuesaentity.cpp  kuesaentity_p.h  kuesanode.cpp  kuesanode.h  logging.cpp  logging_p.h  meshinstantiator.cpp  meshinstantiator.h  metallicroughnesseffect.cpp  metallicroughnesseffect.h  metallicroughnessmaterial.cpp  (+37 more)
src/doc/: doc.pro  kuesa.qdocconf
src/python/: CMakeLists.txt  README.md  bindings.h  bindings.xml
src/python/utils/: pyside2_config.py  utils.py
src/utils/: boundingvolumerenderer.cpp  boundingvolumerenderer.h  kuesa_utils_global.h  orbitcameracontroller.cpp  orbitcameracontroller.h  sceneconfiguration.cpp  sceneconfiguration.h  utils.pro  utils.qrc  view3dscene.cpp  view3dscene.h  viewconfiguration.cpp  viewconfiguration.h  window.cpp  window.h
tests/: tests.pro
tests/auto/: auto.pro
tests/manual/: manual.pro
tools/: configure.json  tools.pro
tools/assetpipelineeditor/: Info.plist  Info.plist.in  RenderPreviewGraph.qml  animationwidget.cpp  animationwidget.h  animationwidget.ui  assetinspector.cpp  assetinspector.h  assetinspectorwidget.cpp  assetinspectorwidget.h  assetpipelineeditor.pro  camerawidget.cpp  camerawidget.h  camerawidget.ui  collectionbrowser.cpp  collectionbrowser.h  collectionmodel.cpp  collectionmodel.h  create_macos_installer.sh.in  create_windows_installer.bat.in  dracocompressor.cpp  dracocompressor.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  installer.iss.in  lightwidget.cpp  lightwidget.ui  macUtils.mm  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  materialinspector.cpp  materialinspector.h  materialwidget.cpp  materialwidget.h  materialwidget.ui  meshinspector.cpp  (+19 more)
tools/assetprocessor/: assetprocessor.pro  main.cpp
tools/cubemaptooctahedralmap/: CopyOutputToSSBO.qml  FlatOctahedronEntity.qml  OctahedralMapPreview.qml  OctahedralSkybox.qml  cubemaptooctahedralmap.pro  main.cpp  main.qml  qml.qrc  ssbobuffer.cpp  ssbobuffer.h
tools/ddspreviewer/: TexturePreview.qml  ddsheaderparser.cpp  ddsheaderparser.h  ddspreviewer.pro  main.cpp  main.qml  qml.qrc
tools/gleslint/: gleslint.py  readme.md
tools/gltfEditor/: Info.plist.in  RenderPreviewGraph.qml  animationwidget.cpp  animationwidget.h  assetinspector.cpp  assetinspector.h  assetinspectorwidget.cpp  assetinspectorwidget.h  camerawidget.cpp  camerawidget.h  collectionbrowser.cpp  collectionbrowser.h  collectionmodel.cpp  collectionmodel.h  colorlabel.cpp  colorlabel.h  create_macos_installer.sh.in  create_windows_installer.bat.in  exportdialog.cpp  exportdialog.h  exportdialog.ui  gltfEditor.pro  installer.iss.in  lightinspector.cpp  lightinspector.h  lightwidget.cpp  lightwidget.h  macUtils.mm  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  materialinspector.cpp  materialinspector.h  materialwidget.cpp  materialwidget.h  materialwidget.ui  memoryusagewidget.cpp  memoryusagewidget.h  (+23 more)
tools/gltfViewer/: Info.plist.in  README.md  gltfViewer.pro  main.cpp  main.qml  orbitcameracontroller.cpp  orbitcameracontroller.h
tools/qtc_templates/: qtc_templates.pro
tools/utils/: custom_material_class_generator.py  stringify_shader.py  update_prototypes.py
tools/windows/: Licensing.rtf  PostInstall.rtf
(+1809 files in other folders)
